syntax = "proto3";

option go_package = "services/proto";

import "services/proto/database.proto";
import "services/proto/general.proto";

message NewRssFeed {
  string rss_url = 1;
}

message NewRssFeedResponse {
    ResultType result_type = 1;
    int64 global_id = 2;

    // Should only be set if result_type is not OK.
    string message = 3;
}

message RssResponse {
    ResultType result_type = 1;

    // Should only be set if result_type is not OK.
    string message = 2;

    // string containing xml feed
    string feed = 3;
}

message feedVerifyResponse {
    ResultType result_type = 1;

    // Should only be set if result_type is not OK.
    string Error = 2;
    string feed_handle = 3;
    string verification_hash = 4;
}

service RSS {
  rpc NewRssFollow(NewRssFeed) returns (NewRssFeedResponse);
  rpc PerUserRss(UsersEntry) returns (RssResponse);
  rpc UpdateUserFeed(FeedVerifyEntry) returns (feedVerifyResponse)
}
